--- a/pages/users.html
+++ b/pages/users.html
@@ -1,6 +1,6 @@
 <header class="flex justify-between items-center mb-6 pb-4 border-b">
      <div class="flex items-center">
-        <button id="menu-toggle-btn-users" class="md:hidden mr-4 p-2 text-gray-600 hover:text-gray-900">
+        <button class="menu-toggle-btn md:hidden mr-4 p-2 text-gray-600 hover:text-gray-900">
              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
         </button>
         <h1 class="text-xl font-bold text-gray-800">帳號管理</h1>
