--- a/pages/main_layout.html
+++ b/pages/main_layout.html
@@ -4,7 +4,7 @@
         <div class="text-center mb-10">
             <img src="https://static.wixstatic.com/media/6148f9_56377cef73c1498f95a2c3057b89f2ed~mv2.png" alt="公司標誌" class="mx-auto mb-4" style="width: 80px; height: 40px;">
             <h2 class="font-bold text-gray-600 text-lg whitespace-nowrap">西北保全勤務管理系統</h2>
-            <p class="text-xs text-gray-600 mt-1">V0.2.2</p>
+            <p class="text-xs text-gray-600 mt-1">V0.3.0</p>
             <div class="mt-4 p-2 rounded-lg bg-gray-200">
                  <span id="user-display" class="text-sm text-gray-700 font-medium block"></span>
             </div>
@@ -12,31 +12,8 @@
 
         <hr class="border-t border-gray-300 mb-6">
         
-        <nav class="flex flex-col space-y-2">
-            <a href="#users" id="nav-users-btn" class="nav-btn font-semibold p-3 rounded-lg flex items-center justify-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
-                </svg>
-                <span>帳號管理</span>
-            </a>
-            <a href="#community" id="nav-community-btn" class="nav-btn font-semibold p-3 rounded-lg flex items-center justify-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" viewBox="0 0 20 20" fill="currentColor">
-                   <path fill-rule="evenodd" d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" clip-rule="evenodd" />
-                </svg>
-                <span>社區管理</span>
-            </a>
-            <a href="#location" id="nav-location-btn" class="nav-btn font-semibold p-3 rounded-lg flex items-center justify-center">
-                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" viewBox="0 0 20 20" fill="currentColor">
-                   <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 21l-4.95-6.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
-                 </svg>
-                <span>定位打卡</span>
-            </a>
-            <a href="#settings" id="nav-settings-btn" class="nav-btn font-semibold p-3 rounded-lg flex items-center justify-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.532 1.532 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.532 1.532 0 01-.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
-                </svg>
-                <span>系統設定</span>
-            </a>
+        <nav id="main-nav" class="flex flex-col space-y-2">
+            <!-- Nav buttons will be dynamically inserted here by auth.js -->
         </nav>
 
         <div class="mt-auto">
