--- a/pages/settings.html
+++ b/pages/settings.html
@@ -21,8 +21,7 @@
         <!-- Roles -->
         <div class="bg-gray-50 p-4 rounded-lg shadow-sm">
             <div class="flex justify-between items-center mb-3">
-                <h4 class="font-semibold text-gray-700">角色</h4>
-                <button id="add-role-btn" class="bg-green-500 text-white px-2 py-1 text-xs rounded hover:bg-green-600">新增</button>
+                <h4 class="font-semibold text-gray-700">角色 (固定權限)</h4>
             </div>
             <ul id="roles-list" class="space-y-2 max-h-60 overflow-y-auto"></ul>
         </div>
@@ -58,4 +57,3 @@
         </div>
     </div>
 </div>
-
