--- a/pages/system-monitor.html
+++ b/pages/system-monitor.html
@@ -1,3 +1,6 @@
+<!-- Chart.js for system monitoring charts -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <header class="flex justify-between items-center mb-6 pb-4 border-b">
      <div class="flex items-center">
         <button class="menu-toggle-btn md:hidden mr-4 p-2 text-gray-600 hover:text-gray-900">
